<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <com.haoke.picturepat.edittext.PassWordEdit
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_password_old"
            android:padding="@dimen/layout_x_20"
            android:textSize="@dimen/layout_x_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_x_1"
            android:layout_marginLeft="@dimen/layout_x_20"
            android:layout_marginRight="@dimen/layout_x_20"
            android:background="@color/gray_b" />

        <com.haoke.picturepat.edittext.PassWordEdit
            android:id="@+id/ed_newPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_password_new"
            android:padding="@dimen/layout_x_20"
            android:textSize="@dimen/layout_x_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_x_1"
            android:layout_marginLeft="@dimen/layout_x_20"
            android:layout_marginRight="@dimen/layout_x_20"
            android:background="@color/gray_b" />

        <com.haoke.picturepat.edittext.PassWordEdit
            android:id="@+id/ed_confirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_password_confirm"
            android:padding="@dimen/layout_x_20"
            android:textSize="@dimen/layout_x_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_x_1"
            android:background="@color/gray_b" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_ensure"
        android:layout_width="@dimen/layout_x_400"
        android:layout_height="@dimen/layout_y_55"
        android:layout_marginTop="@dimen/layout_y_50"
        android:background="@drawable/shape_login_bt"
        android:text="@string/other_ensure"
        android:textColor="@color/white"
        android:textSize="@dimen/layout_x_22" />

</LinearLayout>