<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <com.haoke.picturepat.edittext.NameEdit
                android:id="@+id/ed_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_name"
                android:padding="@dimen/layout_x_20"
                android:textSize="@dimen/layout_x_18" />

            <ImageView
                android:id="@+id/image_user"
                android:layout_width="@dimen/layout_x_40"
                android:layout_height="@dimen/layout_x_40"
                android:layout_marginRight="@dimen/layout_x_30"
                android:src="@drawable/ui2_user_icon_default" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_x_1"
            android:layout_marginLeft="@dimen/layout_x_20"
            android:layout_marginRight="@dimen/layout_x_20"
            android:background="@color/gray_b" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <com.haoke.picturepat.edittext.IMEIEdit
                android:id="@+id/ed_imei"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_imei"
                android:inputType="number"
                android:padding="@dimen/layout_x_20"
                android:textSize="@dimen/layout_x_18" >
            </com.haoke.picturepat.edittext.IMEIEdit>

            <Button
                android:id="@+id/bt_code"
                android:layout_width="@dimen/layout_x_40"
                android:layout_height="@dimen/layout_y_40"
                android:layout_marginRight="@dimen/layout_x_30"
                android:background="@drawable/register_code"
                android:textColor="@color/blue_n"
                android:textSize="@dimen/layout_x_18" />
        </LinearLayout>

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_x_1"
            android:background="@color/gray_b" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/ck_AccepteSrv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_y_50"
        android:checked="true"
        android:text="@string/register_wx"
        android:textSize="@dimen/layout_x_18" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="@dimen/layout_x_400"
        android:layout_height="@dimen/layout_y_55"
        android:layout_marginTop="@dimen/layout_y_10"
        android:background="@drawable/shape_login_bt"
        android:text="@string/register_register"
        android:textColor="@color/white"
        android:textSize="@dimen/layout_x_22" />

</LinearLayout>